# Guiitamp

./: .project  README.md  settings.gradle
app/: .project  build.gradle
app/src/androidTest/java/com/example/giribasicamplifier/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/example/guiitamp/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  FullDuplexPass.h  FullDuplexStream.cpp  FullDuplexStream.h  LiveEffectEngine.h  jni_bridge.cpp
app/src/main/cpp/AEfromArduino/: AudioEffect.h
app/src/main/cpp/BaseClasses/: ModulationBaseClass.hpp
app/src/main/cpp/DelayEffects/: SimpleChorus.hpp  SimpleDelay.hpp  SimpleFlanger.hpp
app/src/main/java/com/example/giribasicamplifier/: AudioDeviceAdapter.java  AudioDeviceInfoConverter.java  AudioDeviceListEntry.java  AudioDeviceSpinner.java  BasicAmplifier.java  Chorus.java  Delay.java  Echo.java  FirstFragment.java  LiveEffectEngine.java  MainActivity.java  Pedal.java  PedalAdapter.java  Reverb.java  SecondFragment.java  SideMenu.java
app/src/main/java/com/example/guiitamp/: AudioDeviceAdapter.java  AudioDeviceInfoConverter.java  AudioDeviceListEntry.java  AudioDeviceSpinner.java  Chorus.java  Delay.java  Distortion.java  Echo.java  Fuzz.java  LiveEffectEngine.java  MainActivity.java  Pedal.java  PedalAdapter.java  Reverb.java  SideMenu.java  Tremolo.java
app/src/main/res/drawable/: ic_baseline_arrow_back.xml  ic_baseline_arrow_back_gray.xml  ic_baseline_menu_open_gray.xml  ic_baseline_menu_temp.xml  ic_guitar_pedal.xml
app/src/main/res/layout/: activity_main.xml  fragment_first.xml  header_navigation_drawer.xml  knobs_container.xml  pedal_item.xml  side_menu.xml
app/src/main/res/menu/: menu_main.xml  side_menu.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: colors.xml  dimens.xml  ic_launcher_background.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/giribasicamplifier/: ExampleUnitTest.java
app/src/test/java/com/example/guiitamp/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
